src/objects/CBL_Seedbed__c.object
<CustomObject>
    <description>Represents the Seedbed information for a Coffee Basline</description>
    <fields>
        <fullName>Baseline__c</fullName>
        <label>Baseline</label>
        <referenceTo>CBL_CoffeeBaseline__c</referenceTo>
        <relationshipLabel>CBL_Seedbed</relationshipLabel>
        <relationshipName>CBL_Seedbed</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Latitude_seedbed__c</fullName>
        <formula>Submission__r.gfsurveys__gps_y__c</formula>
        <label>Latitude_seedbed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude_seedbed__c</fullName>
        <formula>Submission__r.gfsurveys__gps_x__c</formula>
        <label>Longitude_seedbed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MgmtPlanPestsDiseas__c</fullName>
        <label>MgmtPlanPestsDiseas</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seedbe_code_guat__c</fullName>
        <label>Seedbed code guat</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL_Seedbed</relationshipLabel>
        <relationshipName>CBL_Seedbed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>adecquatePlantsSelection__c</fullName>
        <label>adecquatePlantsSelection</label>
        <picklist>
            <picklistValues>
                <fullName>Buen desarrollo follaje con 3-4 cruces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Número abundante de hojas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raíces bien desarrolladas y formadas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sin plagas y enfermedades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No selecciona las plantas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>agrochemicalsDiseasesControl__c</fullName>
        <label>agrochemicalsDiseasesControl</label>
        <picklist>
            <picklistValues>
                <fullName>No usa productos químicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epoxiconazole (Opus 12.5 SC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyproconazole (Alto 10 SL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiadimenol (Caporal 25 DC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tebuconazole (Atlas 25 EW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tebuconazole+Triadimenol-Silvacur Combi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eposiconazole+Carbenzadim (Duett 25 SC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azoxystorbin + Cyproconazole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epoxyconazole + Pyraclostrobin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carbendazim (Derosal 50 SC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propamocarb Fosetilato (Previcur)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>altitudeMetersOverSeaLevel__c</fullName>
        <label>altitudeMetersOverSeaLevel</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>appliesChemicalFertilizers__c</fullName>
        <label>appliesChemicalFertilizers</label>
        <picklist>
            <picklistValues>
                <fullName>No aplica fertilizantes químicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fórmula completa N-P-K-Mg-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula completa N-P-K (15-15-15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula Completa N-P-K (20-20-0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula Completa (DAP) N-P-K (18-46-0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula Completa (MAP) N-P-K (11-50-0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula Completa (20-0-20)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urea N (46)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitrato de amonio N (33)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulfato de amonio N- S (21-24)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muriato de Potasio MOP K (60)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulfato de Potasio K-S (50-18)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula de acuerdo a análisis de suelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>appliesOrganicFertilizers__c</fullName>
        <label>appliesOrganicFertilizers</label>
        <picklist>
            <picklistValues>
                <fullName>No usa fertilizantes orgánicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lombricompost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bocashi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estiércoles de animales (Composteados)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estiércoles de animales (Sin compostear)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materia orgánica vegetal(Sin compostear)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uso de microorganismos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foliares permitidos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>chemicalProductsPlagueControl__c</fullName>
        <label>chemicalProductsPlagueControl</label>
        <picklist>
            <picklistValues>
                <fullName>Thiodan 35% (Endosulfan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lorsban 48 EC (Clorpirifós)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temik 15G (Aldicarb)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furadan 10G (Carbofuran)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mocap 15G (Ethoprop)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nemacur 10G (Fenamifos)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter 10 G (Terbufós)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decis 2.5 EC (Deltametrina)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malathion 50 EC (MALATION O,O-Dimetil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>coffeeVarietiesProducedBought__c</fullName>
        <label>coffeeVarietiesProducedBought</label>
        <picklist>
            <picklistValues>
                <fullName>Blue Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bourbon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castillo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catimor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catuai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catuai 44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caturra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garnica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geisha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icatu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lempira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maragogipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mondo Novo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montecristo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacamara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pache</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pache Colis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruiru11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarchimor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sumatra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tekisisc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>community__c</fullName>
        <label>community</label>
        <picklist>
            <picklistValues>
                <fullName>Laureles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <picklist>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <label>department</label>
        <picklist>
            <picklistValues>
                <fullName>Antioquia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>diseasesPlagues__c</fullName>
        <label>diseasesPlagues</label>
        <picklist>
            <picklistValues>
                <fullName>Nemátodos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insectos cortadores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otras plagas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal de talluelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ojo de gallo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mancha de hierro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otras enfermedades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No hace nada para controlar plagas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>estimatedNumberPlantsToBuy__c</fullName>
        <label>estimatedNumberPlantsToBuy</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>estimatedNumberPlantsToProduce__c</fullName>
        <label>estimatedNumberPlantsToProduce</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fertilizationPlan__c</fullName>
        <label>fertilizationPlan</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>municipality__c</fullName>
        <label>municipality</label>
        <picklist>
            <picklistValues>
                <fullName>Medellin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>organicProductsDiseasesControl__c</fullName>
        <label>organicProductsDiseasesControl</label>
        <picklist>
            <picklistValues>
                <fullName>Caldo bordelés</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caldo visosa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caldo sulfo cálcico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulfato de cobre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulfato e zinc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sulfato de magnesio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidróxido de cobre (Cobre)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Óxido de cobre (Cobre)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oxicloruro de cobre (Cobre)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agua caliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microorganismos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>plagueControl__c</fullName>
        <label>plagueControl</label>
        <picklist>
            <picklistValues>
                <fullName>Control físico /uso de trampas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uso de injerto sobre patrón robusta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control biológico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insecticidas botánicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insecticidas químicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No las controlan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>seedbedCode__c</fullName>
        <label>seedbedCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>seedbedLocation__c</fullName>
        <label>seedbedLocation</label>
        <picklist>
            <picklistValues>
                <fullName>Finca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>seedbedSeedOrigin__c</fullName>
        <label>seedbedSeedOrigin</label>
        <picklist>
            <picklistValues>
                <fullName>Semilla certificada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No certificada pero semilla seleccionada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No hubo proceso de selección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finca Orgánica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Es Genéticamente Modificada OGM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>seedbedUsage__c</fullName>
        <label>seedbedUsage</label>
        <picklist>
            <picklistValues>
                <fullName>Sembrar en sus parcelas/fincas/chacras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vender a otros productores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Todas las anteriores</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>thisYearBoughtMadeSeedbed__c</fullName>
        <label>thisYearBoughtMadeSeedbed</label>
        <picklist>
            <picklistValues>
                <fullName>Hizo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compró</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hizo y Compró</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>CBL_Seedbed</label>
    <nameField>
        <displayFormat>SB-{0000000}</displayFormat>
        <label>CBL_Seedbed Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBL_Seedbed</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>